--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.4",
     "js-cookie": "^3.0.5",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "nodemailer": "^6.9.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
